# solar-monitor

./: Cargo.toml  README.md  deploy.sh  solar-monitor.service
.cargo/: config
src/: console_display.rs  error.rs  i2c_display.rs  main.rs  rgbdigit.rs  rgbdigit_display.rs  solar_status.rs  tesla_powerwall.rs
src/resources/: solar-monitor.psd
