[package]
name = "solar-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { version = "0.8.1", optional = true}
linux-embedded-hal = { version = "0.3.2", optional = true}
rand = "0.8.5"
ssd1306 = { version = "0.8.4", optional = true}

[features]
i2c_display = ["dep:embedded-graphics", "dep:linux-embedded-hal", "dep:ssd1306"]
